bindings/dart/native/decentdb.h

typedef uint32_t ddb_status_t;
enum {
  DDB_OK = 0,
  DDB_ERR_IO = 1,
  DDB_ERR_CORRUPTION = 2,
  DDB_ERR_CONSTRAINT = 3,
  DDB_ERR_TRANSACTION = 4,
  DDB_ERR_SQL = 5,
  DDB_ERR_INTERNAL = 6,
  DDB_ERR_PANIC = 7,
  DDB_ERR_UNSUPPORTED_FORMAT_VERSION = 8,
  DDB_ERR_BUSY = 9,
  DDB_ERR_TIMEOUT = 10,
  DDB_ERR_CANCELED = 11,
  DDB_ERR_QUEUE_FULL = 12,
  DDB_ERR_QUEUE_CLOSED = 13
};
enum {
  DDB_WRITE_QUEUE_TIMEOUT_DEFAULT = UINT64_MAX
};
typedef struct ddb_db_handle ddb_db_t;
typedef struct ddb_result_handle ddb_result_t;
typedef struct ddb_watch_handle ddb_watch_t;
typedef enum ddb_value_tag_t {
  DDB_VALUE_NULL = 0,
  DDB_VALUE_INT64 = 1,
  DDB_VALUE_FLOAT64 = 2,
  DDB_VALUE_BOOL = 3,
  DDB_VALUE_TEXT = 4,
  DDB_VALUE_BLOB = 5,
  DDB_VALUE_DECIMAL = 6,
  DDB_VALUE_UUID = 7,
  DDB_VALUE_TIMESTAMP_MICROS = 8,
  DDB_VALUE_GEOMETRY = 9,
  DDB_VALUE_GEOGRAPHY = 10,
  DDB_VALUE_ENUM = 11,
  DDB_VALUE_IPADDR = 12,
  DDB_VALUE_CIDR = 13,
  DDB_VALUE_DATE = 14,
  DDB_VALUE_TIME = 15,
  DDB_VALUE_TIMESTAMPTZ_MICROS = 16,
  DDB_VALUE_INTERVAL = 17,
  DDB_VALUE_MACADDR = 18
} ddb_value_tag_t;
typedef struct ddb_value_t {
  uint32_t tag;
  uint8_t bool_value;
  uint8_t reserved0[7];
  int64_t int64_value;
  double float64_value;
  int64_t decimal_scaled;
  uint8_t decimal_scale;
  uint8_t reserved1[7];
  uint8_t *data;
  size_t len;
  uint8_t uuid_bytes[16];
  int64_t timestamp_micros;
  uint64_t enum_type_id;
  uint64_t enum_label_id;
  uint8_t ip_family;
  uint8_t cidr_prefix_len;
  uint8_t reserved2[6];
  uint8_t ip_cidr_addr_bytes[16];
  int32_t date_days;
  int64_t time_micros;
  int64_t timestamptz_micros;
  int32_t interval_months;
  int32_t interval_days;
  int64_t interval_micros;
} ddb_value_t;
typedef struct ddb_write_queue_metrics_t {
  size_t capacity;
  size_t current_depth;
  uint64_t admitted;
  uint64_t rejected;
  uint64_t timed_out;
  uint64_t canceled;
  uint64_t executed;
  uint64_t committed;
  uint64_t failed;
  uint64_t group_commit_batches;
  uint64_t group_commit_syncs;
  uint64_t group_commit_max_batch;
  uint64_t group_commit_commits_covered;
  uint64_t physical_syncs_saved;
  uint64_t total_queue_wait_ns;
} ddb_write_queue_metrics_t;
const char *ddb_last_error_message(void);
/*
 * Returns owned JSON for the most recent DecentDB error on this thread.
 * On success, `*out_json` is either NULL when there is no last error or a
 * UTF-8 JSON string that must be freed with ddb_string_free.
 * Calling this accessor does not clear or replace ddb_last_error_message().
 */
ddb_status_t ddb_last_error_json(char **out_json);
ddb_status_t ddb_value_dispose(ddb_value_t *value);
/*
 * Frees a string previously returned by this API.
 * Call ddb_string_free exactly once for each successful string-returning call.
 * Failing to free the string leaks that allocation until process exit.
 * Do not call ddb_string_free concurrently from multiple threads on the same pointer.
 */
ddb_status_t ddb_string_free(char **value);
ddb_status_t ddb_db_open_or_create(const char *path, ddb_db_t **out_db);
/*
 * Frees a database handle returned by ddb_db_create, ddb_db_open, or ddb_db_open_or_create.
 * Call ddb_db_free exactly once for each successful handle-creating call.
 * Failing to free the handle leaks internal database state until process exit.
 * Do not call ddb_db_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_db_free(ddb_db_t **db);
/*
 * On success, ownership of the returned result handle transfers to the caller.
 * Call ddb_result_free exactly once for each successful ddb_db_execute call.
 * The handle retains references to internal database state; failing to free it leaks that state
 * until process exit.
 * Do not call ddb_result_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_db_execute(
    ddb_db_t *db,
    const char *sql,
    const ddb_value_t *params,
    size_t params_len,
    ddb_result_t **out_result);
/*
 * Executes one SQL statement through the engine-owned write queue.
 * Pass DDB_WRITE_QUEUE_TIMEOUT_DEFAULT to use the database configured default.
 * Pass 0 for immediate timeout behavior. On success, ownership of the returned
 * result handle transfers to the caller.
 */
ddb_status_t ddb_db_execute_queued(
    ddb_db_t *db,
    const char *sql,
    const ddb_value_t *params,
    size_t params_len,
    uint64_t timeout_ms,
    ddb_result_t **out_result);
ddb_status_t ddb_db_write_queue_metrics(
    ddb_db_t *db,
    ddb_write_queue_metrics_t *out_metrics);
ddb_status_t ddb_db_watch_query_json(
    ddb_db_t *db,
    const char *request_json,
    ddb_watch_t **out_watch);
ddb_status_t ddb_watch_next_json(
    ddb_watch_t *watch,
    uint32_t timeout_ms,
    char **out_json);
ddb_status_t ddb_watch_close(ddb_watch_t **watch);
ddb_status_t ddb_db_begin_transaction(ddb_db_t *db);
ddb_status_t ddb_db_commit_transaction(ddb_db_t *db, uint64_t *out_lsn);
ddb_status_t ddb_db_rollback_transaction(ddb_db_t *db);
ddb_status_t ddb_db_in_transaction(ddb_db_t *db, uint8_t *out_flag);
ddb_status_t ddb_db_save_as(ddb_db_t *db, const char *dest_path);
/*
 * Frees a result handle returned by ddb_db_execute.
 * Call ddb_result_free exactly once for each successful ddb_db_execute call.
 * Failing to free the handle leaks retained database state until process exit.
 * Do not call ddb_result_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_result_free(ddb_result_t **result);
ddb_status_t ddb_result_row_count(ddb_result_t *result, size_t *out_rows);
ddb_status_t ddb_result_column_count(ddb_result_t *result, size_t *out_columns);
/*
 * Performance note: ddb_result_value_copy returns owned values and may allocate
 * per cell. For streaming read-heavy paths, prefer statement row-view APIs.
 *
 * Initialize out_value with ddb_value_init before first use, then call
 * ddb_value_dispose when done. Reusing the same initialized ddb_value_t for
 * multiple value-copy calls is supported; previous owned cell storage is
 * released before the new value is written.
 */
ddb_status_t ddb_result_value_copy(
    ddb_result_t *result,
    size_t row_index,
    size_t column_index,
    ddb_value_t *out_value);